--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "bugs": {
     "url": "https://github.com/larsnordstrom/saltybaguette/issues"
   },
-  "homepage": "https://github.com/larsnordstrom/saltybaguette#readme",
+  "homepage": "https://saltybaguette.com",
   "dependencies": {
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
